--- a/style.css
+++ b/style.css
@@ -84,10 +84,10 @@ section.title .title-line{
 
 /* Waves */
 .waves { 
-    height: 50%;
+    height: 1000%;
     width:100%;
     position: absolute;
-    top: -75vh;
+    top: 0;
     left:0;
     z-index: -1;
     overflow: hidden;
@@ -112,4 +112,22 @@ section.title .title-line{
     height: 400px;
     animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 14s ease -1.25s infinite;
     transform: translate3d(0, 0, 0);
+}
+
+@keyframes wave {
+    0% {
+        margin-left: 0;
+    }
+    100% {
+        margin-left: -1600px;
+    }
+}
+    
+@keyframes swell {
+    0%, 100% {
+        transform: translate3d(0,-25px,0);
+    }
+    50% {
+        transform: translate3d(0,5px,0);
+    }
 }
