--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    column-gap: 20rem;
+    column-gap: 18rem;
 
  }
  section.title .titleBox h1 {
@@ -84,18 +84,19 @@ section.title .title-line{
 
 /* Waves */
 .waves { 
-    height: 1000%;
+    height: 100%;
     width:100%;
+    opacity: 90%;
     position: absolute;
-    top: 0;
+    top: 10%;
     left:0;
     z-index: -1;
     overflow: hidden;
 }
   
 .wave1{
-    filter: blur(1.8rem);
-    background: url(Assets/Images/wave2.svg) repeat-x;
+    filter: blur(1rem);
+    background: url(Assets/Images/wave1.svg) repeat-x;
     position: absolute;
     top: 400px;
     width: 6400px;
@@ -104,8 +105,8 @@ section.title .title-line{
     transform: translate3d(0, 0, 0);
 }
 .wave2 {
-    filter: blur(1.8rem);
-    background: url(Assets/Images/wave1.svg) repeat-x; 
+    filter: blur(1rem);
+    background: url(Assets/Images/wave2.svg) repeat-x; 
     position: absolute;
     top: 400px;
     width: 6400px;
