--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
-/* Style-colors*/
+/* font */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
 
+/* Card */
+[data-theme] {
+    background-color: var(--color-bg, white);
+    color: var(--color-contrast-high, #313135);
+}
+
+/* Style-colors*/
 html{
     scroll-behavior: smooth;
 }
@@ -7,6 +15,11 @@ html{
 :root{
     --pink: #FF7C7C;
     --background:#FEF9F8; 
+}
+
+p{
+    margin-block-start: 0em;
+    margin-block-end: 0em;
 }
 
 body {
@@ -27,6 +40,10 @@ body {
     color: var(--pink);
  }
 
+ li, ul{
+    list-style: none;
+ }
+
 
  body::-webkit-scrollbar {
     display: none;
@@ -43,7 +60,7 @@ body {
     top: 1.5rem;
     width: 100%;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     
     font-size: 0.8rem;
     font-weight: 500;
@@ -56,7 +73,14 @@ body {
     font-size: 1.5rem;
  }
 
+ .music{
+    display: flex;
+    align-items: center;
+    column-gap: 0.2rem;
+ }
 
+
+ /* title */
  section.title {
     position: relative;
     height: 100vh;
@@ -66,11 +90,11 @@ body {
     align-items: center;
     justify-content: center;
     column-gap: 18rem;
-
  }
  section.title .titleBox h1 {
     font-size: 5rem;
     font-weight: 700;
+    margin-top: 1.24rem;
     margin-bottom: 1.25rem;
  }
 section.title .titleBox .title-description{
@@ -78,13 +102,66 @@ section.title .titleBox .title-description{
     font-weight: 200;
     margin-bottom: 1rem;
 }
+
+.title-button-container{
+    display: flex;
+    justify-content: flex-start;
+    column-gap: 1.5rem;
+
+}
+
+.title-button{
+    background-color: #FFFFFF;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    min-width: 7.5rem;
+    border-radius: 8px;
+    margin-top: 3rem;
+    display: flex;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+.title-button-description{
+    color: #FFADAD;
+    font-size: 0.8rem;
+    margin: 0px;
+}
+.title-button-store{
+    color: var(--pink);
+    font-size: 1rem;
+}
+
+i {
+    width: 20%;
+    text-align: center;
+    font-size: 28px;
+    margin-right: 7px;
+}
+
+/* description curvy line */
 section.title .title-line{
     position: absolute;
 }
 
+
+/* Scroll down */
+.scroll{
+    position: fixed;
+    left: 50%;
+    bottom: 5%;
+    padding: -2rem;
+    font-size: 0.8rem;
+    font-weight: 500;
+}
+
+
+
+
 /* Waves */
 .waves { 
-    height: 100%;
+    height: 150%;
     width:100%;
     opacity: 90%;
     position: absolute;
@@ -132,3 +209,34 @@ section.title .title-line{
         transform: translate3d(0,5px,0);
     }
 }
+
+
+/* Cards */
+.stack-cards {
+    --stack-cards-gap: var(--space-sm);
+}
+
+.stack-cards__item {
+    position: sticky;
+    top: var(--space-sm);
+    transform-origin: center top;
+}
+
+
+.stack-cards__item > * {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+}
+
+.grid {
+    --grid-gap: 0px;
+    --offset: var(--grid-gap);
+    display: flex;
+    flex-wrap: wrap; }
+    .grid > * {
+      flex-basis: 100%;
+}
+  
