--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 /* font */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap");
 
 /* Style-colors*/
-html{
+html {
     scroll-behavior: smooth;
 }
 
-*{
+* {
     overflow-x: hidden;
 }
 
-:root{
-    --pink: #FF7C7C;
-    --background:#FEF9F8; 
-    --cardBackground: #FFECEA;
+:root {
+    --pink: #ff7c7c;
+    --background: #fef9f8;
+    --cardBackground: #ffecea;
 }
 
-p{
+p {
     margin-block-start: 0em;
     margin-block-end: 0em;
 }
@@ -24,36 +24,35 @@ p{
 body {
     background-color: var(--background);
     font-family: museo, serif;
-    color: var(--pink); 
+    color: var(--pink);
     margin-left: 1.8rem;
     margin-right: 1.8rem;
     overflow-x: hidden;
- }
+}
 
- a:link{
+a:link {
     text-decoration: none;
     color: var(--pink);
- }
- 
- a:visited{
+}
+
+a:visited {
     text-decoration: none;
     color: var(--pink);
- }
+}
 
- li, ul{
+li,
+ul {
     list-style: none;
- }
+}
 
-
- body::-webkit-scrollbar {
+body::-webkit-scrollbar {
     display: none;
-  }
+}
 
+/* Body */
 
-  /* Body */
-
-  /* Header(Navigation Bar) */
-  header {
+/* Header(Navigation Bar) */
+header {
     position: relative;
     display: flex;
     z-index: 20;
@@ -61,62 +60,60 @@ body {
     width: 100%;
     justify-content: space-between;
     align-items: flex-start;
-    
+
     font-size: 0.8rem;
     font-weight: 500;
     box-sizing: border-box;
- }
+}
 
 .logo {
     font-weight: 700;
     font-size: 1.5rem;
- }
+}
 
- .music{
+.music {
     display: flex;
     align-items: center;
     column-gap: 0.2rem;
- }
+}
 
-
- /* title */
- section.title {
+/* title */
+section.title {
     position: relative;
     height: 100vh;
     box-sizing: border-box;
-    
+
     display: flex;
     align-items: center;
     justify-content: center;
     column-gap: 14rem;
- }
- .app-name{
+}
+.app-name {
     display: flex;
     justify-content: flex-start;
     column-gap: 1.2rem;
- }
- section.title .titleBox h1 {
+}
+section.title .titleBox h1 {
     font-size: 5rem;
     font-weight: 700;
     margin-top: 1.24rem;
     margin-bottom: 1.25rem;
- }
-section.title .titleBox .title-description{
+}
+section.title .titleBox .title-description {
     font-size: 2.5rem;
     font-weight: 200;
     margin-bottom: 1rem;
 }
 
-.title-button-container{
+.title-button-container {
     display: flex;
     justify-content: flex-start;
     column-gap: 1.5rem;
-
 }
 
-.title-button{
-    background-color: #FFFFFF;
-    font-family: 'Inter', sans-serif;
+.title-button {
+    background-color: #ffffff;
+    font-family: "Inter", sans-serif;
     font-weight: 500;
     min-width: 8rem;
     border-radius: 8px;
@@ -129,12 +126,12 @@ section.title .titleBox .title-description{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
-.title-button-description{
-    color: #FFADAD;
+.title-button-description {
+    color: #ffadad;
     font-size: 0.8rem;
     margin: 0px;
 }
-.title-button-store{
+.title-button-store {
     color: var(--pink);
     font-size: 1rem;
 }
@@ -146,20 +143,18 @@ i {
     margin-right: 7px;
 }
 
-.title-mockup{
-    max-width:350px;
+.title-mockup {
+    max-width: 350px;
     height: auto;
 }
 
-
 /* description curvy line */
-section.title .title-line{
+section.title .title-line {
     position: absolute;
 }
 
-
 /* Scroll down */
-.scroll{
+.scroll {
     position: fixed;
     left: 50%;
     bottom: 5%;
@@ -173,52 +168,67 @@ section.title .title-line{
     transition: all 0.3s;
 }
 
-@-webkit-keyframes pulse { 
-    0% { -webkit-transform: translate(0, 0); transform: translate(0, 0); } 
-    50% { -webkit-transform: translate(0, 10px); transform: translate(0, 10px); } 
-    100% { -webkit-transform: translate(0, 0); transform: translate(0, 0); } 
+@-webkit-keyframes pulse {
+    0% {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0);
+    }
+    50% {
+        -webkit-transform: translate(0, 10px);
+        transform: translate(0, 10px);
+    }
+    100% {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0);
+    }
 }
-    
-@keyframes pulse { 
-    0% { -webkit-transform: translate(0, 0); transform: translate(0, 0); } 
-    50% { -webkit-transform: translate(0, 10px); transform: translate(0, 10px); } 
-    100% { -webkit-transform: translate(0, 0); transform: translate(0, 0); } 
+
+@keyframes pulse {
+    0% {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0);
+    }
+    50% {
+        -webkit-transform: translate(0, 10px);
+        transform: translate(0, 10px);
+    }
+    100% {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0);
+    }
 }
-
-
-
 
 /* Waves */
-.waves { 
+.waves {
     height: 100vh;
-    width:100%;
+    width: 100%;
     opacity: 90%;
     position: absolute;
     top: 10%;
-    left:0;
+    left: 0;
     z-index: -2;
     overflow: hidden;
 }
-  
-.wave1{
+
+.wave1 {
     filter: blur(0.5rem);
     background: url(Assets/Images/wave1.svg) repeat-x;
     position: absolute;
     top: 400px;
     width: 6400px;
     height: 1200px;
-    animation: wave 14s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite, swell 3s ease -1.25s infinite;
+    animation: wave 14s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite, swell 3s ease -1.25s infinite;
     transform: translate3d(0, 0, 0);
     z-index: -2;
 }
 .wave2 {
     filter: blur(0.5rem);
-    background: url(Assets/Images/wave2.svg) repeat-x; 
+    background: url(Assets/Images/wave2.svg) repeat-x;
     position: absolute;
     top: 400px;
     width: 6400px;
     height: 1200px;
-    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 14s ease -1.25s infinite;
+    animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.125s infinite, swell 14s ease -1.25s infinite;
     transform: translate3d(0, 0, 0);
     z-index: -2;
 }
@@ -231,23 +241,23 @@ section.title .title-line{
         margin-left: -1600px;
     }
 }
-    
+
 @keyframes swell {
-    0%, 100% {
-        transform: translate3d(0,-25px,0);
+    0%,
+    100% {
+        transform: translate3d(0, -25px, 0);
     }
     50% {
-        transform: translate3d(0,5px,0);
+        transform: translate3d(0, 5px, 0);
     }
 }
-
 
 /* Cards */
 .stack-cards {
     height: 100%;
     background: var(--cardBackground);
     border-radius: 50px;
-    margin-top: 4rem; 
+    margin-top: 4rem;
 }
 
 .stack-cards__item {
@@ -262,10 +272,10 @@ section.title .title-line{
     z-index: 2;
 }
 
-.text-component{
+.text-component {
     max-width: 35%;
 }
-.text-component h2{
+.text-component h2 {
     font-size: 2.5rem;
     line-height: 140%;
     font-weight: 500;
@@ -274,32 +284,32 @@ section.title .title-line{
 .stack-cards__item {
     top: var(--space-sm);
     left: 0;
-    height: 100%;     
+    height: 100%;
 }
 
-.text-component .function-description{
+.text-component .function-description {
     font-size: 1.1rem;
     font-weight: 300;
-    line-height: 160%
+    line-height: 160%;
 }
 
 /* Quote API */
-.quote-container{
+.quote-container {
     display: flex;
     justify-content: center;
     margin-top: 12rem;
     overflow-x: hidden;
-
 }
 
-.white-container{
+.white-container {
     position: absolute;
     border-radius: 50px;
-    z-index: -1;
     margin-bottom: 6rem;
+    background-color: white;
+    z-index: 1;
 }
 
-.API-text{
+.API-text {
     position: relative;
     top: -50%;
     transform: translate(15%, -350%);
@@ -310,42 +320,41 @@ section.title .title-line{
     font-size: 2.5rem;
 }
 
-.character-container{
+.character-container {
     position: relative;
     display: flex;
     justify-content: space-between;
-    
+
     min-width: 80%;
     padding-top: 10rem;
-    
+    z-index: 2;
 }
 
-
 /* Quote API Wave */
-.quote-background-container { 
+.quote-background-container {
     height: 100%;
     width: 120%;
     bottom: 0px;
     width: 120%;
-    z-index: -1;
 }
-  
-.quote-background{
+
+.quote-background {
     filter: blur(3rem);
     position: relative;
     bottom: -4rem;
     height: 12rem;
+    width: 100vw;
+    margin-left: -1.8rem;
 }
-  
 
 /* Footer */
-.footer{
+.footer {
     height: 6rem;
     /* background: white; */
     width: 100%;
 }
 
-.footer .footer-menu{
+.footer .footer-menu {
     padding-top: 2rem;
     display: flex;
     align-items: center;
@@ -354,7 +363,11 @@ section.title .title-line{
     margin-right: 0px;
 }
 
-.footer .footer-menu-item{
+.footer .footer-menu-item {
     font-size: 0.8rem;
     font-weight: 300;
+}
+
+.quote-container-box {
+    background-image: url("./Assets/Images/Background.svg");
 }
