--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ html {
 
 * {
     overflow-x: hidden;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 :root {
@@ -25,9 +27,13 @@ body {
     background-color: var(--background);
     font-family: museo, serif;
     color: var(--pink);
+    
+    overflow-x: hidden;
+}
+
+.margin{
     margin-left: 1.8rem;
     margin-right: 1.8rem;
-    overflow-x: hidden;
 }
 
 a:link {
@@ -52,12 +58,11 @@ body::-webkit-scrollbar {
 /* Body */
 
 /* Header(Navigation Bar) */
-header {
+.navigation {
     position: relative;
     display: flex;
     z-index: 20;
     top: 1.5rem;
-    width: 100%;
     justify-content: space-between;
     align-items: flex-start;
 
@@ -103,6 +108,12 @@ section.title .titleBox .title-description {
     font-size: 2.5rem;
     font-weight: 200;
     margin-bottom: 1rem;
+}
+
+#piece-of-cake{
+    background-image: url('/Assets/Images/main-line.svg');
+    background-repeat: no-repeat;
+    background-position: 0% 75%;
 }
 
 .title-button-container {
@@ -298,6 +309,7 @@ section.title .title-line {
     display: flex;
     justify-content: center;
     margin-top: 12rem;
+    margin-bottom: 8rem;
     overflow-x: hidden;
 }
 
