--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body::-webkit-scrollbar {
     font-size: 1.5rem;
 }
 
-.music {
+.weather-container {
     display: flex;
     align-items: center;
     column-gap: 0.2rem;
