--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ html {
 }
 
 * {
-    overflow-x: hidden;
     margin-left: 0px;
     margin-right: 0px;
 }
@@ -16,6 +15,7 @@ html {
     --pink: #ff7c7c;
     --background: #fef9f8;
     --cardBackground: #ffecea;
+    --space-sm: calc(0.75 * 1rem);
 }
 
 p {
@@ -27,8 +27,6 @@ body {
     background-color: var(--background);
     font-family: museo, serif;
     color: var(--pink);
-    
-    overflow-x: hidden;
 }
 
 .margin{
@@ -49,6 +47,8 @@ a:visited {
 li,
 ul {
     list-style: none;
+    margin-block-start: 1em;
+    padding: 0px;
 }
 
 body::-webkit-scrollbar {
@@ -63,6 +63,7 @@ body::-webkit-scrollbar {
     display: flex;
     z-index: 20;
     top: 1.5rem;
+    /* padding-top: 1.5rem; */
     justify-content: space-between;
     align-items: flex-start;
 
@@ -265,22 +266,23 @@ section.title .title-line {
 
 /* Cards */
 .stack-cards {
-    height: 100%;
-    background: var(--cardBackground);
-    border-radius: 50px;
-    margin-top: 4rem;
+    height: 350%;
+    --stack-cards-gap: var(--space-sm);
 }
 
-.stack-cards__item {
+/* https://codepen.io/bramus/pen/PobmGme */
+.stack-cards-item {
     position: sticky;
-    top: var(--space-sm);
-    transform-origin: center top;
-
+    top: 0.75rem;
+    margin-top: 4rem;
+    background: var(--cardBackground);
+    border-radius: 50px;
     padding: 4.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     z-index: 2;
+    align-self: flex-start;
 }
 
 .text-component {
@@ -310,7 +312,6 @@ section.title .title-line {
     justify-content: center;
     margin-top: 12rem;
     margin-bottom: 8rem;
-    overflow-x: hidden;
 }
 
 .white-container {
@@ -357,6 +358,13 @@ section.title .title-line {
     height: 12rem;
     width: 100vw;
     margin-left: -1.8rem;
+    overflow-x: hidden;
+
+}
+
+.quote-container-box {
+    background-image: url("./Assets/Images/Background.svg");
+    overflow-x: hidden;
 }
 
 /* Footer */
@@ -377,8 +385,4 @@ section.title .title-line {
 .footer .footer-menu-item {
     font-size: 0.8rem;
     font-weight: 300;
-}
-
-.quote-container-box {
-    background-image: url("./Assets/Images/Background.svg");
 }
