--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ html {
 * {
     margin-left: 0px;
     margin-right: 0px;
+    overflow-x: clip;
+}
+
+.overflow-x{
+    overflow-x: hidden;
 }
 
 :root {
@@ -27,6 +32,8 @@ body {
     background-color: var(--background);
     font-family: museo, serif;
     color: var(--pink);
+    max-width: 100vw;
+
 }
 
 .margin{
@@ -266,7 +273,7 @@ section.title .title-line {
 
 /* Cards */
 .stack-cards {
-    height: 350%;
+    height: 100%;
     --stack-cards-gap: var(--space-sm);
 }
 
@@ -370,7 +377,7 @@ section.title .title-line {
 /* Footer */
 .footer {
     height: 6rem;
-    width: 100%;
+    overflow-x: hidden;
 }
 
 .footer .footer-menu {
@@ -380,9 +387,13 @@ section.title .title-line {
     column-gap: 2rem;
     margin-left: 0px;
     margin-right: 0px;
+    overflow-x: hidden;
+
 }
 
 .footer .footer-menu-item {
     font-size: 0.8rem;
     font-weight: 300;
+    overflow-x: hidden;
+
 }
