--- a/style.css
+++ b/style.css
@@ -294,7 +294,8 @@ section.title .title-line {
 }
 
 .text-component {
-    max-width: 35%;
+    max-width: 45%;
+    padding-top: -2rem;
 }
 .text-component h2 {
     font-size: 2.5rem;
