--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ html {
     --background: #fef9f8;
     --cardBackground: #ffecea;
     --space-sm: calc(0.75 * 1rem);
+    
+    --card-height: 40vw;
+	--card-margin: 4vw;
+	--card-top-offset: 1rem;
+	--numcards: 4;
 }
 
 p {
@@ -273,25 +278,96 @@ section.title .title-line {
 }
 
 /* Cards */
-.stack-cards {
-    height: 100%;
-    --stack-cards-gap: var(--space-sm);
+/* https://codepen.io/bramus/pen/PobmGme */
+
+#cards {
+    /* height: 100%; */
+    padding-bottom: calc(var(--numcards) * var(--card-top-offset)); 
+	margin-bottom: var(--card-margin);
 }
 
-/* https://codepen.io/bramus/pen/PobmGme */
+#card_1 {
+	--index: 1;
+}
+
+#card_2 {
+	--index: 2;
+}
+
+#card_3 {
+	--index: 3;
+}
+
 .stack-cards-item {
     position: sticky;
-    top: 0.75rem;
-    margin-top: 4rem;
+    top: 1rem;
+    padding: 4.5rem;
+
+    margin-top: calc(var(--index) * var(--card-top-offset));
     background: var(--cardBackground);
     border-radius: 50px;
-    padding: 4.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     z-index: 2;
     align-self: flex-start;
 }
+
+.card-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* caution */
+
+@supports (animation-timeline: works) {
+	@scroll-timeline cards-element-scrolls-in-body {
+		source: selector(body);
+		scroll-offsets:
+			/* Start when the start edge touches the top of the scrollport */
+			selector(#cards) start 1,
+			/* End when the start edge touches the start of the scrollport */
+			selector(#cards) start 0
+        ;
+		start: selector(#cards) start 1; /* Start when the start edge touches the top of the scrollport */
+		end: selector(#cards) start 0; /* End when the start edge touches the start of the scrollport */
+		time-range: 4s;
+	}
+
+	.stack-cards-item {
+		--index0: calc(var(--index) - 1); /* 0-based index */
+		--reverse-index: calc(var(--numcards) - var(--index0)); /* reverse index */
+		--reverse-index0: calc(var(--reverse-index) - 1); /* 0-based reverse index */
+	}
+	
+	.card-content {
+		transform-origin: 50% 0%;
+		will-change: transform;
+
+		--duration: calc(var(--reverse-index0) * 1s);
+		--delay: calc(var(--index0) * 1s);
+
+		animation: var(--duration) linear scale var(--delay) forwards;
+		animation-timeline: cards-element-scrolls-in-body;
+	}
+
+	@keyframes scale {
+		to {
+			transform: 0.1;
+				/* scale(calc(
+					1.1
+					-
+					calc(0.1 * var(--reverse-index))
+				)); */
+		}
+	}
+}
+
+#cards{
+    display: flex;
+    flex-direction: column;
+	column-gap: 8rem;
+}
+
+/* caution */
 
 .text-component {
     max-width: 45%;
@@ -301,12 +377,6 @@ section.title .title-line {
     font-size: 2.5rem;
     line-height: 140%;
     font-weight: 500;
-}
-
-.stack-cards__item {
-    top: var(--space-sm);
-    left: 0;
-    height: 100%;
 }
 
 .text-component .function-description {
