--- a/style.css
+++ b/style.css
@@ -291,19 +291,26 @@ section.title .title-line {
 
 /* Cards */
 .stack-cards {
+    /* height: 100vh; */
     height: 100%;
     --stack-cards-gap: var(--space-sm);
+    overflow: scroll;
+    /* scroll-snap-type: y proximity; */
 }
 
-/* https://codepen.io/bramus/pen/PobmGme */
+.stack-cards::-webkit-scrollbar {
+    display: none;
+  }
+
 .stack-cards-item {
     height: 75vh;
-    position: sticky;
-    top: 0.75rem;
-    margin-top: 4rem;
+    position: relative;
+    /* top: 0.75rem; */
+    margin-bottom: 4rem;
     background: var(--cardBackground);
     border-radius: 80px;
     padding: 4.5rem;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -311,24 +318,18 @@ section.title .title-line {
     align-self: flex-start;
 }
 
-/* .stack-cards-container {
-    overflow: auto;
-    scroll-snap-type: y mandatory;
-    height: 100vh;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    overflow-y: scroll; 
+.stack-cards-item{
+    scroll-snap-align: start;
 }
 
-.scroll-snapper{
+/* .scroll-snapper{
     scroll-snap-align: start;
-    height: 100vh;
-}
+} */
 
 
 .stack-cards-container::-webkit-scrollbar {
     display: none;
-} */
+}
 
 
 
@@ -631,13 +632,11 @@ section.title .title-line {
         display: flex;
         flex-direction: column;
         gap: 80px;
-    }
-
-    .stack-cards-container{
         margin: 0 1vw 0 1vw;
         padding: 0 60px 0 60px;
-
     }
+
+
     
     .stack-cards-item{
         display: flex;
