--- a/style.css
+++ b/style.css
@@ -292,7 +292,8 @@ section.title .title-line {
 
 /* Cards */
 .stack-cards {
-    top: 0.4rem;
+    width: 100%;
+    top: 1rem;
     height: 100vh;
     --stack-cards-gap: var(--space-sm);
     overflow: scroll;
@@ -306,8 +307,8 @@ section.title .title-line {
   }
 
 .stack-cards-item {
-    margin-left: 1.8rem;
-    margin-right: 1.8rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
     height: 75vh;
     position: relative;
     margin-bottom: 4rem;
