--- a/style.css
+++ b/style.css
@@ -241,7 +241,8 @@ section.title .title-line {
     height: 100vh;
     width: 100%;
     opacity: 90%;
-    position: absolute;
+    /* position: absolute; */
+    position: fixed;
     top: 10%;
     left: 0;
     z-index: -2;
@@ -294,10 +295,11 @@ section.title .title-line {
 .stack-cards {
     width: 100%;
     top: 1rem;
-    height: 100vh;
+    /* height: 100vh; */
+    height: 100%;4
     --stack-cards-gap: var(--space-sm);
-    overflow: scroll;
-    scroll-snap-type: y mandatory;
+    /* overflow: scroll; */
+    /* scroll-snap-type: y mandatory; */
     z-index: 3;
     position: relative;
 }
@@ -360,7 +362,7 @@ section.title .title-line {
 .quote-container {
     display: flex;
     justify-content: center;
-    margin-top: 8rem;
+    margin-top: 12rem;
     margin-bottom: 8rem;
 }
 
