--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
     #preloader {
         background-color: var(--pink);
         color: var(--cardBackground);
-        height: 100vh;
+        height: 100%;
         width: 100%;
         position: fixed;
         z-index: 100;
@@ -319,7 +319,7 @@
         top: 1rem;
         /* height: 100vh; */
         height: 100%;
-        4 --stack-cards-gap: var(--space-sm);
+        --stack-cards-gap: var(--space-sm);
         /* overflow: scroll; */
         /* scroll-snap-type: y mandatory; */
         z-index: 3;
