--- a/style.css
+++ b/style.css
@@ -339,7 +339,10 @@
         margin-top: 4rem;
         background: var(--cardBackground);
         border-radius: 80px;
-        padding: 4.5rem;
+        padding-left: 4.5rem;
+        padding-top: 4.5rem;
+        padding-bottom: 4.5rem;
+        padding-left: 1.5rem;
 
         display: flex;
         align-items: center;
