--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
 
     }
 
-#loader{
+    #loader {
         width: 100%;
         height: 120%;
         margin: 0;
@@ -60,11 +60,11 @@
         top: -20px;
         cursor: url('Assets/Images/White-cursor.svg'), auto;
 
-}
+    }
 
 
 
-    .loader-text{
+    .loader-text {
         display: flex;
         justify-content: center;
         margin-top: 25%;
@@ -495,9 +495,6 @@
 
 
 @media (min-width: 1em) and (max-width: 63.9375em) {
-    * {
-        /* display: none; */
-    }
 
     :root {
         --pink: #ff7c7c;
@@ -552,9 +549,36 @@
         margin: 0;
     }
 
-    .titleBox {}
-
     .navigation {
+        display: none;
+    }
+
+    #loader {
+        width: 100%;
+        height: 120%;
+        margin: 0;
+        padding: 0;
+        position: fixed;
+        background-color: var(--pink);
+        color: var(--background);
+        font-size: 5rem;
+        z-index: 100;
+        top: -20px;
+        cursor: url('Assets/Images/White-cursor.svg'), auto;
+
+    }
+
+    .loader-text {
+        display: flex;
+        justify-content: center;
+        margin-top: 25%;
+    }
+
+    .logo{
+        display: none;
+    }
+
+    .weather-container{
         display: none;
     }
 
@@ -619,12 +643,13 @@
 
     .title-mockup {
         position: relative;
-        max-width: 240px;
-        left: 45vw;
-        top: -20vh;
+        max-width: 90%;
+        left: 6rem;
+        top: -10vh;
         opacity: 40%;
         z-index: -100;
         animation: float 6s ease-in-out infinite;
+        overflow-x: clip;
     }
 
     @keyframes float {
@@ -690,7 +715,6 @@
         font-family: museo, serif;
         font-weight: 300;
         color: #FF7C7C;
-
     }
 
     .player {
