--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@
         font-size: 5rem;
         z-index: 100;
         top: -20px;
+        left: -20px;
         cursor: url('Assets/Images/White-cursor.svg'), auto;
 
     }
@@ -571,7 +572,7 @@
     .loader-text {
         display: flex;
         justify-content: center;
-        margin-top: 100%;
+        margin-top: 50vh;
     }
 
     .logo{
