--- a/style.css
+++ b/style.css
@@ -306,8 +306,8 @@ section.title .title-line {
   }
 
 .stack-cards-item {
-    margin-left: 1.8rem;
-    margin-right: 1.8rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
     height: 75vh;
     position: relative;
     margin-bottom: 4rem;
@@ -326,10 +326,6 @@ section.title .title-line {
 .sectionDivider{
     scroll-snap-align: start;
 }
-
-/* .scroll-snapper{
-    scroll-snap-align: start;
-} */
 
 
 .stack-cards-container::-webkit-scrollbar {
@@ -438,6 +434,7 @@ section.title .title-line {
     margin-left: 0px;
     margin-right: 0px;
     overflow-x: hidden;
+    scroll-snap-stop: normal;
 
 }
 
