--- a/style.css
+++ b/style.css
@@ -57,7 +57,6 @@
         z-index: 100;
         top: -20px;
         cursor: url("Assets/Images/White-cursor.svg"), auto;
-        display: none;
     }
 
     .loader-text {
@@ -558,10 +557,11 @@
     }
 
     #loader {
-        width: 100%;
+        width: 110%;
         height: 120%;
         margin: 0;
         padding: 0;
+        left: -20px;
         position: fixed;
         background-color: var(--pink);
         color: var(--background);
